@@ -1,3 +1,12 @@
+2005-02-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c: Check panPartStart[0] is 0 in SHPCreateObject().
+
+	* Fixed bug 305 in DBFCloneEmpty() - header length problem.
+
+	* Make the pszStringField buffer for DBFReadAttribute() static char 
+	[256] as per bug 306.
+
 2004-09-15  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c: treat all blanks as NULL in DBFIsAttributeNULL().
